[package]
name = "fuel-core-backup-cli"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = {  version = "4.5.23" , features = ["derive"]}
anyhow = "1.0.95"
fuel-core = { git = "https://github.com/FuelLabs/fuel-core", branch = "fix/db-backup", features = ["rocksdb", "backup"] }
tar = { version = "0.4.43", optional = true}
xz2 = { version = "0.1.7", optional = true }

[features]
compress = ["dep:tar", "dep:xz2"]