[package]
name = "fuel-core-backup-cli"
version = "0.0.2"
edition = "2021"

[dependencies]
clap = {  version = "4.5.27" , features = ["derive"]}
anyhow = "1.0.95"
fuel-core = { version = "0.41.6", features = ["rocksdb", "backup"] }
tar = { version = "0.4.43", optional = true}
tempfile = { version = "3.16.0", optional = true }
rayon = { version = "1.10.0", optional = true }

[features]
archive = ["dep:tar", "dep:tempfile", "dep:rayon"]
default = ["archive"]
